--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,7 +14,6 @@ $app-direction: ltr;
 
 @import "ionic.globals";
 
-
 // Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
@@ -71,6 +70,7 @@ $colors: (
 // default are overridden.
 
 @import "ionic.theme.default";
+@import "animate.css";
 
 
 // Ionicons
